bindings/c/whiteout_mdx.h

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_MdxExtent whiteout_MdxExtent;
typedef struct whiteout_MdxModel whiteout_MdxModel;
typedef struct whiteout_MdxSequence whiteout_MdxSequence;
typedef struct whiteout_MdxTexture whiteout_MdxTexture;
typedef struct whiteout_MdxSound whiteout_MdxSound;
typedef struct whiteout_MdxSoundEmitter whiteout_MdxSoundEmitter;
typedef struct whiteout_MdxMaterial whiteout_MdxMaterial;
typedef struct whiteout_MdxTextureAnimation whiteout_MdxTextureAnimation;
typedef struct whiteout_MdxGeoset whiteout_MdxGeoset;
typedef struct whiteout_MdxGeosetAnimation whiteout_MdxGeosetAnimation;
typedef struct whiteout_MdxBone whiteout_MdxBone;
typedef struct whiteout_MdxLight whiteout_MdxLight;
typedef struct whiteout_MdxHelper whiteout_MdxHelper;
typedef struct whiteout_MdxAttachment whiteout_MdxAttachment;
typedef struct whiteout_MdxParticleEmitter whiteout_MdxParticleEmitter;
/* ── MdxModel ─────────────────────────────────────────────── */

/* Complete MDX model file structure */
/*  */
/* This structure represents an entire MDX model, including all geometry, materials, animations, and metadata. It can represent models from Warcraft III Classic (version 800) through Reforged (version 1200). */
/*  */
/* The structure is organized into chunks, each containing a specific type of data. Not all chunks are required - optional chunks can have empty vectors. */
whiteout_MdxModel* whiteout_mdx_MdxModel_new(void);
void whiteout_mdx_MdxModel_delete(whiteout_MdxModel* self);
/* MDX version: 800 (Classic), 900, 1000, 1100, 1200 (Reforged) */
uint32_t whiteout_mdx_MdxModel_get_version(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_set_version(whiteout_MdxModel* self, uint32_t value);
/* Name of the model */
whiteout_CString whiteout_mdx_MdxModel_get_modelName(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_set_modelName(whiteout_MdxModel* self, const char* value);
/* Path to external animation file (rarely used) */
whiteout_CString whiteout_mdx_MdxModel_get_animationFileName(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_set_animationFileName(whiteout_MdxModel* self, const char* value);
/* Bounding volume for the entire model */
whiteout_MdxExtent* whiteout_mdx_MdxModel_get_modelExtent(whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_set_modelExtent(whiteout_MdxModel* self, const whiteout_MdxExtent* value);
/* Time in milliseconds to blend between animations */
uint32_t whiteout_mdx_MdxModel_get_blendTime(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_set_blendTime(whiteout_MdxModel* self, uint32_t value);
/* Global looping animation durations */
size_t whiteout_mdx_MdxModel_get_globalSequences_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_globalSequences(whiteout_MdxModel* self, size_t count);
const uint32_t* whiteout_mdx_MdxModel_get_globalSequences_data(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_assign_globalSequences(whiteout_MdxModel* self, const uint32_t* data, size_t count);
/* Named animation sequences */
size_t whiteout_mdx_MdxModel_get_sequences_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_sequences(whiteout_MdxModel* self, size_t count);
whiteout_MdxSequence* whiteout_mdx_MdxModel_get_sequences_at(whiteout_MdxModel* self, size_t index);
/* Texture paths and settings */
size_t whiteout_mdx_MdxModel_get_textures_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_textures(whiteout_MdxModel* self, size_t count);
whiteout_MdxTexture* whiteout_mdx_MdxModel_get_textures_at(whiteout_MdxModel* self, size_t index);
/* Sounds (deprecated) */
size_t whiteout_mdx_MdxModel_get_sounds_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_sounds(whiteout_MdxModel* self, size_t count);
whiteout_MdxSound* whiteout_mdx_MdxModel_get_sounds_at(whiteout_MdxModel* self, size_t index);
/* Sound emitters (deprecated) */
size_t whiteout_mdx_MdxModel_get_soundEmitters_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_soundEmitters(whiteout_MdxModel* self, size_t count);
whiteout_MdxSoundEmitter* whiteout_mdx_MdxModel_get_soundEmitters_at(whiteout_MdxModel* self, size_t index);
/* Material definitions */
size_t whiteout_mdx_MdxModel_get_materials_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_materials(whiteout_MdxModel* self, size_t count);
whiteout_MdxMaterial* whiteout_mdx_MdxModel_get_materials_at(whiteout_MdxModel* self, size_t index);
/* UV animation data */
size_t whiteout_mdx_MdxModel_get_textureAnimations_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_textureAnimations(whiteout_MdxModel* self, size_t count);
whiteout_MdxTextureAnimation* whiteout_mdx_MdxModel_get_textureAnimations_at(whiteout_MdxModel* self, size_t index);
/* Mesh geometry */
size_t whiteout_mdx_MdxModel_get_geosets_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_geosets(whiteout_MdxModel* self, size_t count);
whiteout_MdxGeoset* whiteout_mdx_MdxModel_get_geosets_at(whiteout_MdxModel* self, size_t index);
/* Mesh visibility/color animation */
size_t whiteout_mdx_MdxModel_get_geosetAnimations_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_geosetAnimations(whiteout_MdxModel* self, size_t count);
whiteout_MdxGeosetAnimation* whiteout_mdx_MdxModel_get_geosetAnimations_at(whiteout_MdxModel* self, size_t index);
/* Skeleton bones */
size_t whiteout_mdx_MdxModel_get_bones_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_bones(whiteout_MdxModel* self, size_t count);
whiteout_MdxBone* whiteout_mdx_MdxModel_get_bones_at(whiteout_MdxModel* self, size_t index);
/* Helper/attachment nodes */
size_t whiteout_mdx_MdxModel_get_helpers_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_helpers(whiteout_MdxModel* self, size_t count);
whiteout_MdxHelper* whiteout_mdx_MdxModel_get_helpers_at(whiteout_MdxModel* self, size_t index);
/* Equipment attachment points */
size_t whiteout_mdx_MdxModel_get_attachments_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_attachments(whiteout_MdxModel* self, size_t count);
whiteout_MdxAttachment* whiteout_mdx_MdxModel_get_attachments_at(whiteout_MdxModel* self, size_t index);
/* Pivot points for nodes */
size_t whiteout_mdx_MdxModel_get_pivotPoints_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_pivotPoints(whiteout_MdxModel* self, size_t count);
const float* whiteout_mdx_MdxModel_get_pivotPoints_data(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_assign_pivotPoints(whiteout_MdxModel* self, const float* data, size_t count);
/* Light sources */
size_t whiteout_mdx_MdxModel_get_lights_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_lights(whiteout_MdxModel* self, size_t count);
whiteout_MdxLight* whiteout_mdx_MdxModel_get_lights_at(whiteout_MdxModel* self, size_t index);
/* Particle emitters v1 */
size_t whiteout_mdx_MdxModel_get_particleEmitters_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_particleEmitters(whiteout_MdxModel* self, size_t count);
whiteout_MdxParticleEmitter* whiteout_mdx_MdxModel_get_particleEmitters_at(whiteout_MdxModel* self, size_t index);