bindings/java/src/main/java/whiteout/mdx/internal/Native.java


    // -- MdxModel --
    public static final MethodHandle whiteout_mdx_MdxModel_new = find(
        "whiteout_mdx_MdxModel_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_delete = find(
        "whiteout_mdx_MdxModel_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_get_version = find("whiteout_mdx_MdxModel_get_version", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_set_version = find("whiteout_mdx_MdxModel_set_version", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxModel_get_modelName = find("whiteout_mdx_MdxModel_get_modelName", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_set_modelName = find("whiteout_mdx_MdxModel_set_modelName", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_get_animationFileName = find("whiteout_mdx_MdxModel_get_animationFileName", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_set_animationFileName = find("whiteout_mdx_MdxModel_set_animationFileName", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_get_modelExtent = find("whiteout_mdx_MdxModel_get_modelExtent", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_set_modelExtent = find("whiteout_mdx_MdxModel_set_modelExtent", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_get_blendTime = find("whiteout_mdx_MdxModel_get_blendTime", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_set_blendTime = find("whiteout_mdx_MdxModel_set_blendTime", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxModel_get_globalSequences_count = find("whiteout_mdx_MdxModel_get_globalSequences_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_globalSequences = find("whiteout_mdx_MdxModel_resize_globalSequences", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_globalSequences_data = find("whiteout_mdx_MdxModel_get_globalSequences_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_assign_globalSequences = find("whiteout_mdx_MdxModel_assign_globalSequences", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_sequences_count = find("whiteout_mdx_MdxModel_get_sequences_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_sequences = find("whiteout_mdx_MdxModel_resize_sequences", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_sequences_at = find("whiteout_mdx_MdxModel_get_sequences_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_textures_count = find("whiteout_mdx_MdxModel_get_textures_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_textures = find("whiteout_mdx_MdxModel_resize_textures", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_textures_at = find("whiteout_mdx_MdxModel_get_textures_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_sounds_count = find("whiteout_mdx_MdxModel_get_sounds_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_sounds = find("whiteout_mdx_MdxModel_resize_sounds", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_sounds_at = find("whiteout_mdx_MdxModel_get_sounds_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_soundEmitters_count = find("whiteout_mdx_MdxModel_get_soundEmitters_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_soundEmitters = find("whiteout_mdx_MdxModel_resize_soundEmitters", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_soundEmitters_at = find("whiteout_mdx_MdxModel_get_soundEmitters_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_materials_count = find("whiteout_mdx_MdxModel_get_materials_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_materials = find("whiteout_mdx_MdxModel_resize_materials", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_materials_at = find("whiteout_mdx_MdxModel_get_materials_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_textureAnimations_count = find("whiteout_mdx_MdxModel_get_textureAnimations_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_textureAnimations = find("whiteout_mdx_MdxModel_resize_textureAnimations", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_textureAnimations_at = find("whiteout_mdx_MdxModel_get_textureAnimations_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_geosets_count = find("whiteout_mdx_MdxModel_get_geosets_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_geosets = find("whiteout_mdx_MdxModel_resize_geosets", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_geosets_at = find("whiteout_mdx_MdxModel_get_geosets_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_geosetAnimations_count = find("whiteout_mdx_MdxModel_get_geosetAnimations_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_geosetAnimations = find("whiteout_mdx_MdxModel_resize_geosetAnimations", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_geosetAnimations_at = find("whiteout_mdx_MdxModel_get_geosetAnimations_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_bones_count = find("whiteout_mdx_MdxModel_get_bones_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_bones = find("whiteout_mdx_MdxModel_resize_bones", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_bones_at = find("whiteout_mdx_MdxModel_get_bones_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_helpers_count = find("whiteout_mdx_MdxModel_get_helpers_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_helpers = find("whiteout_mdx_MdxModel_resize_helpers", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_helpers_at = find("whiteout_mdx_MdxModel_get_helpers_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_attachments_count = find("whiteout_mdx_MdxModel_get_attachments_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_attachments = find("whiteout_mdx_MdxModel_resize_attachments", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_attachments_at = find("whiteout_mdx_MdxModel_get_attachments_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_pivotPoints_count = find("whiteout_mdx_MdxModel_get_pivotPoints_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_pivotPoints = find("whiteout_mdx_MdxModel_resize_pivotPoints", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_pivotPoints_data = find("whiteout_mdx_MdxModel_get_pivotPoints_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_assign_pivotPoints = find("whiteout_mdx_MdxModel_assign_pivotPoints", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_lights_count = find("whiteout_mdx_MdxModel_get_lights_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_lights = find("whiteout_mdx_MdxModel_resize_lights", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_lights_at = find("whiteout_mdx_MdxModel_get_lights_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_particleEmitters_count = find("whiteout_mdx_MdxModel_get_particleEmitters_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_particleEmitters = find("whiteout_mdx_MdxModel_resize_particleEmitters", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_particleEmitters_at = find("whiteout_mdx_MdxModel_get_particleEmitters_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
